  are available. Substantial speedups are achieved. These implementations
  do not support obtaining the rate matrix. Use the older style implementation
  if you require that (toggled by the rate_matrix_required argument).
* Added fit_function function. This allows to fit any model to a x and y 
  dataset using simplex to reduce the error between the model and the data.

Changes
-------

* python 2.6 is now the minimum required version
* We have removed code authored by Ziheng Yang as it is not available under
  an open source license. We note a modest performance hit for nucleotide and
  dinucleotide models. Codon models are not affected. The PredefinedNucleotide
  models recently added are faster than the older approach that used Yang's
  code.
* The PredefinedNucleotide models are now available via cogent.evolve.models.
  The old-style (slower) nucleotide models can be obtained by setting
  rate_matrix_required=True.

Bug Fixes
---------

* fixed bug that crept into doing consensus trees from tree collections.
  Thanks to Klara Verbyla for catching this one!
* fixed a bug (#3170464) affecting obtaining sequences from non-chromosome
  level coordinate systems. Thanks to brandoninvergo for reporting and Hua
  Ying for the patch!

Cogent 1.4.1 - 1.5
==================

New Features
------------

* major additions to Cookbook. Thanks to the many contributors (too many to
  list here)!
* added AlleleFreqs attribute to ensembl Variation objects.
* added getGeneByStableId method to genome objects.
* added Introns attribute to Transcript objects and an Intron class. (Thanks
  to Hua Ying for this patch!)
* added Mann-Whitney test and a Monte-Carlo version
* exploratory and confirmatory period estimation techniques (suitable for
  symbolic and continuous data)
* Information theoretic measures (AIC and BIC) added
* drawing of trees with collapsed nodes
* progress display indicator support for terminal and GUI apps